--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -15,11 +8,10 @@ on:
 
 permissions:
   contents: read
-
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   # образ для сборки
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +20,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Run SUT
+      run:  java -jar ./artifacts/app-order.jar &   # здесь указываете свой джарник
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: build
+      run: ./gradlew test --info -Dselenide.headless=true
